# MIRA

./: .gitignore  Cargo.toml  readme.md
config/: config_exemple.toml
src/: NeuralNetwork.rs  data_collections.rs  db_controller.rs  dictionary_of_symbols.rs  legacy_code.rs  lib.rs  main.rs  predict_system.rs
src/NeuralNetwork/: ImplicationNeuron.rs  Neuron.rs  Sinaps.rs
