[package]
name = "Mira_Core"
version = "0.0.1"
edition = "2021"

[dependencies]
config = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
scraper = "0.21"
rusqlite = { version = "0.32",features = ["bundled"] }
regex = "1"
indicatif = "0.17"
flate2 = "1"
csv = "1"
chrono = "0.4"
tempfile = "3"